# roast

./: .env.example  .gitignore  CODEBASE_STUDY_GUIDE.md  Dockerfile  README.md  ROAST_COMPLETE_DEVELOPER_RUNBOOK.md  h do main  pyproject.toml  test_pdf.txt
backend/: config.py  main.py  pdf_reader.py
backend/agents/: competitive_agent.py  followup_agent.py  json_utils.py  market_context_agent.py  red_flag_agent.py  review_agent.py  schemas.py  six_second_agent.py  tech_search.py  technical_depth_agent.py
backend/agents/prompts/: competitive_prompt.py  follow_up_prompt.py  market_context_prompt.py  red_flag_prompt.py  review_prompt.py  template.py  (+1 more)
backend/corpus/: bullet_curator.py  corpus_store.py
backend/llm/: cerebras_client.py  circuit_breaker.py  gemini_client.py  groq_client.py  langfuse_client.py  nvidia_nim_client.py  openrouter_client.py  router.py
backend/pipeline/: orchestrator.py
backend/retrieval/: dive.py
backend/routes/: analyse.py  cron.py  followup.py  session.py  token_feedback.py  websocket.py  ws_manager.py
backend/storage/: rate_limit.py  redis_client.py  session_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
ingestion/: breaking_signal.py  database.py  embeddings.py  extractor.py  groq_client.py  levels_scraper.py  market_intel.db  pipeline.py  search.py  tavily_client.py
scripts/: prepopulate.py  reembed.py
tests/: test_config.py  test_levels_scraper.py  test_pdf_reader.py  test_phase1.py  test_rate_limit.py  test_session_store.py  test_tavily_client.py
(+12 files in other folders)
